# healthcare-rcm

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker_commands.txt  main.py  pyproject.toml  test.py
config/: database.yaml  files.yaml  logging.yaml  paths.yaml  schemas.yaml
ingestion/: config.py  load_data.py  preprocess.py  utils.py
src/healthcare_rcm/: __init__.py
