[project]
name = "healthcare-rcm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "junaidiqbal-hashmi", email = "161617609+junaidiqbal-hashmi@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
healthcare-rcm = "healthcare_rcm:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
