[project]
name = "healthcare-rcm"
version = "0.1.0"
description = "End-to-end Healthcare Revenue Cycle Management ETL Pipeline using Airflow, PostgreSQL, Docker, and Medallion Architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.51",
    "tqdm>=4.68.4",
]
